# learning_rust

./: .gitignore  Cargo.toml  README.md
.github/prompts/: conventional-commit.prompt.md
01_Fundamentals/01_Guessing_Game/src/: main.rs
01_Fundamentals/05_Practice-01/: Cargo.toml
01_Fundamentals/05_Practice-01/src/: main.rs
01_Hello_World/: main.rs
02_Hello_Cargo/src/: main.rs
02_Ownership_System/01_Ownership/src/: main.rs
02_Ownership_System/02_Borrow/src/: main.rs
03_Structs_Enums/02_Structs_Methods/src/: main.rs
03_Structs_Enums/03_Enums/src/: main.rs
03_Structs_Enums/04_practice-02/: Cargo.toml
03_Structs_Enums/04_practice-02/src/: main.rs
04_Variables/src/: main.rs
05_functions/src/: main.rs
06_Flow_Control/src/: main.rs
10_slices/src/: main.rs
11_0_Structs/src/: main.rs
11_1_Structs_Methods/src/: main.rs
11_Structs/src/: main.rs
docs/: 01_Hello_World.md  02_Hello_Cargo.md  03_Guessing_Game.md  04_Variables.md  05_Functions.md  06_Flow_Control.md  07_Practice_1.md  08_Ownership.md  09_Borrow.md  10_Slice.md  11_Structs.md  DOCUMENTATION_ANALYSIS_REPORT.md  README.md  _TEMPLATE.md
docs/00_Getting_Started/: 01_Hello_World.md  02_Hello_Cargo.md
docs/01_Fundamentals/: 01_Guessing_Game.md  02_Variables.md  03_Functions.md  04_Control_Flow.md
docs/02_Ownership_System/: 01_Ownership.md  02_Borrowing.md  03_Slices.md
docs/03_Structs_Enums/: 01_Structs.md  02_Structs_Methods.md  03_Enums.md
docs/04_Package_Crates_Modules/: 01_Packages_and_Crates.md
docs/100_Practices/: 01_Practice-1.md  02_Practice-2.md
(+4 files in other folders)
