[workspace]
members = [
    "00_Getting_Started/02_Hello_Cargo",
    "01_Fundamentals/01_Guessing_Game",
    "01_Fundamentals/02_Variables",
    "01_Fundamentals/03_Functions",
    "01_Fundamentals/04_Flow_Control",
    "01_Fundamentals/05_Practice-01",
    "02_Ownership_System/01_Ownership",
    "02_Ownership_System/02_Borrow",
    "02_Ownership_System/03_slices",
    "03_Structs_Enums/01_Structs",
    "03_Structs_Enums/02_Structs_Methods",
]

[workspace.metadata]
edition = "2021"
